# experiment_knowornot

./: README.md  evaluation_results.csv  pyproject.toml
analyse_data/: analyse_csv.py  correct_gemini_factuality.py  make_csv.py
create_questions/: create_BTT_questions.py  create_CPF_questions.py  create_ICA_questions.py  create_medishield_QA.py  get_ICA_links.py
data/: CPF_raw_QA.json  ICA_FAQ.html  ICA_FAQ.json  all_ICA_QA.json
data/BTT_txts_from_pdf/: BTT_10.txt  BTT_11.txt  BTT_12.txt  BTT_13.txt  BTT_14.txt  BTT_15.txt  BTT_16.txt  BTT_17.txt  BTT_18.txt  BTT_19.txt  BTT_2.txt  BTT_20.txt  BTT_21.txt  BTT_22.txt  BTT_23.txt  BTT_24.txt  BTT_25.txt  BTT_26.txt  BTT_27.txt  BTT_28.txt  BTT_29.txt  BTT_3.txt  BTT_30.txt  BTT_31.txt  BTT_32.txt  BTT_33.txt  BTT_34.txt  BTT_35.txt  BTT_36.txt  BTT_37.txt  BTT_38.txt  BTT_39.txt  BTT_4.txt  (+55 more)
experiment_run/: abstention_evals.py  create_all_experiments.py  run_experiments.py
questions/: BTT_QA.json  CPF_filtered_qa.json  ICA_filtered_qa.json  medishield_QA.json
run_evaluations/: abstention_evals.json  abstention_evals_gpt_41.json  abstention_evals_gpt_4o.json  all_abstention_evals.py  all_factuality_evals.py  disagree_factuality_vs_model.py  factual_model_measure.py  factuality_evals_gemini_2_5_flash.json  factuality_evals_gemini_2_5_pro.json  factuality_evals_gemini_2_flash.json  factuality_evals_gpt_41.json  factuality_evals_iter.py  factuality_evals_o4_mini.json  factuality_label_final.py  gemini_search_evals.py  get_abstention_label_samples.py  inter_annotater.py  label_all.py  make_factuality_data_label.py
(+201 files in other folders)
